[package]
name = "import-amusic-playlist"
version = "0.1.0"
authors = ["Rajasekharan Vengalil <avranju@gmail.com>"]
edition = "2018"

[dependencies]
biscuit = "0.1"
env_logger = "0.6"
futures = "0.1"
log = "0.4"
pem = "0.5"
reqwest = "0.9"
ring = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"
tokio = "0.1"
untrusted = "0.6"